line break for long text2

--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -64,7 +64,7 @@
                                     <th>Giá</th>
                                     <th style="white-space: nowrap;">Ngày bắt đầu</th>
                                     <th style="white-space: nowrap;">Ngày hết hạn</th>
-                                    <th>Người đăng</th>
+                                    <!-- <th>Người đăng</th> -->
                                     <th style="white-space: nowrap;">Trạng thái</th>
                                     <th>Chức năng</th>
                                 </tr>
@@ -111,12 +111,12 @@
                                     </td>
                                     <td>{{article.createTime | date:'dd/MM/yyyy - HH:mm'}}</td> 
                                     <td>{{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</td>
-                                    <td>{{article.customer.email}}</td>
+                                    <!-- <td>{{article.customer.email}}</td> -->
                                     <td>
                                         <span class="text text-warning" style="white-space: nowrap;">{{article?.status}}</span>
                                     </td>
                                     <td>
-                                        <a routerLink="detail-article/{{article.articleId}}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
+                                        <a style=" padding-left: 35px;" routerLink="detail-article/{{article.articleId}}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
                                         <!-- <a routerLink="update-article/{{article.articleId}}" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a> -->
                                         <!-- <a routerLink="../staff" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a> -->
                                     </td>
