--- a/src/app/client/profiles/create-article/create-article.component.css
+++ b/src/app/client/profiles/create-article/create-article.component.css
@@ -850,3 +850,8 @@ agm-map {
 /* .strong {
     font-weight: bold !important;
 } */
+
+.roommate{
+    border: 2px solid #F7CA54;
+    border-radius: 5px;
+}
