--- a/src/app/client/profiles/edit-profile/edit-profile.component.html
+++ b/src/app/client/profiles/edit-profile/edit-profile.component.html
@@ -55,7 +55,13 @@
                                 <input type="text" class="form-control" [formControlName]="'name'">
                             </div>
                         </div>
-                        <div class="form-group row">
+                        <div class="form-group row" *ngIf="customerModel?.birthday.toString() === '1970-01-01'">
+                            <label class="col-md-2 offset-md-2 col-form-label"> Ngày sinh </label>
+                            <div class="col-md-6">
+                                <input type="date"  class="form-control" id="birthday" placeholder="">
+                            </div>
+                        </div>
+                        <div class="form-group row" *ngIf="customerModel?.birthday.toString() !== '1970-01-01'">
                             <label class="col-md-2 offset-md-2 col-form-label"> Ngày sinh </label>
                             <div class="col-md-6">
                                 <input type="date" [formControlName]="'birthday'" class="form-control" id="birthday" placeholder="">
@@ -86,7 +92,8 @@
                             <img class="user-info-image" *ngIf="customerModel?.image" src="{{customerModel?.image}}">
                             <span class="user-info-image" [ngStyle]="{'margin-left': '15px'}">Chọn lại Avatar</span>
                         </label>
-                        <input id="file-input" type="file">
+                        <input id="file-input" type="file" (change)="getFiles($event)">
+                        <button class="btn btn-primary" (click)="uploadImage()" *ngIf="selectedFile != null">Update</button>
                     </div>
 
                     <!-- PHẦN Ô QUẢNG CÁO Ở CUỐI TRANG WEB HIỂN THỊ SDT CHO NG DÙNG LIÊN HỆ -->
