--- a/src/app/client/clients-page/client-tutorial/client-tutorial.component.html
+++ b/src/app/client/clients-page/client-tutorial/client-tutorial.component.html
@@ -3,33 +3,85 @@
         <!-- Header -->
         <app-header></app-header>
         <main id="main">
-            <div class="page404">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-7 col-sm-12 col-xs-12">
-                            <div class="page_404_header">
-                                <h1 class="title">Rất tiếc, có lỗi xảy ra</h1>
-                                <p>Vui lòng liên hệ phongtrothanhxuan@gmail.vn để báo lỗi này. Xin cảm ơn bạn đã support chúng tôi.
-                                </p>
-                            </div>
-                            <div class="page_404_content"></div>
-                        </div>
-                        <div class="col-md-5 col-sm-12 col-xs-12"></div>
+            <div class="container">
+                <div class="page_view_wrapper">
+                    <div class="baiviet_content">
+                        <h2>Hướng dẫn đăng tin</h2>
+                        <p>Chào bạn, sau đây là hướng dẫn sử dụng cho thành viên website PhongTroThanhXuan.com.</p>
+                        <p>Nếu bạn chưa có tài khoản, hãy <a href="http://localhost:4200/auth/signup">đăng
+                                ký
+                                tại đây</a> trước khi bắt đầu đăng tin mới.</p>
+                        <p>Nếu đã có tài khoản, sau khi <a href="http://localhost:4200/auth/login">đăng
+                                nhập</a> vào website, bạn bấm vào nút <a
+                                href="http://localhost:4200/profile/create-article">ĐĂNG TIN</a> để bắt đầu.
+                        </p>
+                        <p>Khi đăng tin các bạn đọc kỹ mô tả từng bước, nhập đầy đủ và chính xác nội dung cho tin đăng,
+                            đặc biệt là mục Giá và Diện tích. Những tin có nội dung hình ảnh rõ ràng, đầy đủ sẽ có tỉ lệ
+                            xem cao hơn 50%.</p>
+                        <p>Lưu ý khi đăng tin:</p>
+                        <p>+ Điền đầy đủ các thông tin bắt buộc vào các ô nhập liệu trong phần đăng tin.</p>
+                        <p>+ Phần giá cho thuê, vui lòng nhập chính xác 1 giá duy nhất (Không nhập giá từ ....đến ....)
+                            và chọn đúng đơn vị giá là triệu/tháng hoặc nghìn/tháng. Ví dụ bạn cho thuê 3 triệu/tháng
+                            thì bạn nhập đủ như sau 3000000 (1 số 3 và 6 số 0)</p>
+                        <p>+ Diện tích nhập đúng 1 diện tích duy nhất (Không nhập diện tích từ ....đến ....)</p>
+                        <p>+ Sau khi nhập đầy đủ các thông tin, bấm ĐĂNG TIN NGAY và chờ vài giây để tin bạn hiển thị
+                            trên website, nếu đăng tin thành công hệ thống sẽ báo bạn đã đăng tin thành công, nếu hệ
+                            thống cảnh báo màu đỏ, các ô chọn màu bị sai, vui lòng nhập lại cho chính xác và bấm ĐĂNG
+                            TIN NGAY lại.</p><br>
+                        <h2>Hướng dẫn nạp tiền</h2>
+                        <p>Sau khi "Đăng nhập" quý khách nhấp chọn vào phần Quản lý tài khoản và chọn <a
+                                href="http://localhost:4200/profile/paypal-view">Nạp Tiền</a></p>
+                        <p>Quý khách có thể chọn các hình thức thanh toán sau: </p>
+                        <ul>
+                            <li>Chuyển khoản trực tiếp vào các số tài khoản tại PhongTroThanhXuan.com thông qua internet
+                                banking hoặc chuyển khoản thông thường.</li>
+                            <li>Thanh toán bằng thẻ ngân hàng nội địa (Lưu ý, thẻ ngân hàng nội địa phải đăng ký giao
+                                dịch online tại ngân hàng phát hành thẻ)</li>
+                            <li>Thanh toán bằng thẻ tính dụng quốc tế/Visa</li>
+                            <li>Thanh toán qua ví điện tử Momo cho số điện thoại 0917.686.101</li>
+                            <li>Thanh toán qua Zalo Pay cho số điện thoại 0917.686.101</li>
+                            <li>Thanh toán trực tiếp tại đỉa chỉ văn phòng (Lầu 7, Số 150 Trần Não, Kp2, Phường Bình An,
+                                Quận 2, TP. Hồ Chí Minh)</li>
+                        </ul>
+                        <p>Link nạp tiền: <a
+                                href="http://localhost:4200/profile/paypal-view">https://PhongTroThanhXuan.com/quan-ly/nap-tien.html</a>
+                        </p><br>
+                        <h2>Hướng dẫn quản lý tin rao</h2>
+                        <p>Đăng nhập tài khoản, sau đó nhấp vào phần Quản lý tài khoản, chọn <a
+                                href="http://localhost:4200/profile/article-manager">Quản lý tin đăng</a> để quản
+                            lý các
+                            tin đã đăng trên hệ thống.</p>
+                        <p style="text-align: left;">+ <strong>Đẩy tin</strong>: có nghĩa là làm mới tin, đưa tin lên
+                            đầu ở từng mục, bạn đang đăng tin thường, thì up lên top sẽ ở đầu danh sách tin thường, bạn
+                            đang đăng tin VIP thì ở đầu danh sách tin VIP (Vip có 2 loại VIP VÀNG và SUPPER VIP)</p>
+                        <p style="text-align: left;">+ <strong>Nâng cấp VIP</strong>: là chức năng giúp thay đổi vị trí
+                            hiện thị của tin đăng lên vị trí cao hơn tiếp cận được nhiều người xem hơn.</p>
+                        <p style="text-align: left;">+ <strong>Sửa</strong>: có nghĩa là bạn có thể sửa lại tin bạn đã
+                            đăng như nội dung, tiêu đề, hoặc giá vvv...</p>
+                        <p style="text-align: left;">+ <strong>Đã cho thuê</strong>: chức năng này rất hay, khi bấm vào
+                            tin đăng của bạn sẽ ko còn hiện trên mục tìm kiếm, người khác sẽ không thấy tin đăng của
+                            bạn, nhưng tin vẫn còn lưu trên website, khi nào bạn cần đăng lại thì có thể &nbsp;nhấp vào
+                            để tin hiển thị lại.</p>
+                        <p style="text-align: left;">+ <strong>Xoá</strong>: có nghĩa là bạn sẽ xoá bỏ vĩnh viễn tin
+                            đăng của mình.</p>
                     </div>
                 </div>
             </div>
             <section class="section section-whyus">
                 <div class="section-content">
                     <h3>Tại sao lại chọn PhongTroThanhXuan.com?</h3>
-                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongTroThanhXuan.com tự hào là trang web đứng top
+                    <p>Chúng tôi biết bạn có rất nhiều lựa chọn, nhưng PhongTroThanhXuan.com tự hào là trang web đứng
+                        top
                         google về các từ khóa: <a href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                             title="Cho thuê phòng trọ"><strong>cho thuê phòng trọ</strong></a>, <strong>nhà
                             trọ</strong>, <a href="https://PhongTroThanhXuan.com/nha-cho-thue"
                             title="Cho thuê nhà nguyên căn"><strong>thuê nhà nguyên căn</strong></a>, <a
-                            href="https://PhongTroThanhXuan.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho thuê căn
+                            href="https://PhongTroThanhXuan.com/cho-thue-can-ho" title="Cho thuê căn hộ"><strong>cho
+                                thuê căn
                                 hộ</strong></a>, <a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep"
                             title="Tìm người ở ghép"><strong>tìm người ở ghép</strong></a>, <a
-                            href="https://PhongTroThanhXuan.com/cho-thue-mat-bang" title="Cho thuê mặt bằng"><strong>cho thuê
+                            href="https://PhongTroThanhXuan.com/cho-thue-mat-bang" title="Cho thuê mặt bằng"><strong>cho
+                                thuê
                                 mặt bằng</strong></a>...Vì vậy tin của bạn đăng trên website sẽ tiếp cận được với nhiều
                         khách hàng hơn, do đó giao dịch nhanh hơn, tiết kiệm chi phí hơn</p>
                     <div class="whyus-countup clearfix">
@@ -45,9 +97,11 @@
                     <h3>Chi phí thấp, hiệu quả tối đa</h3>
                     <div class="clearfix" style="display: flex; justify-content: center;"><span
                             class="star star-5"></span></div>
-                    <p class="testimonial">Trước khi biết website PhongTroThanhXuan, mình phải tốn nhiều công sức và chi phí
+                    <p class="testimonial">Trước khi biết website PhongTroThanhXuan, mình phải tốn nhiều công sức và chi
+                        phí
                         cho việc đăng tin cho thuê: từ việc phát tờ rơi, dán giấy, và đăng lên các website khác nhưng
-                        hiệu quả không cao. Từ khi biết website PhongTroThanhXuan.com, mình đã thử đăng tin lên và đánh giá
+                        hiệu quả không cao. Từ khi biết website PhongTroThanhXuan.com, mình đã thử đăng tin lên và đánh
+                        giá
                         hiệu quả khá cao trong khi chi phí khá thấp, không còn tình trạng phòng trống kéo dài - Anh
                         Khánh (chủ hệ thống phòng trọ tại Tp.HCM)</p>
                     <h3>Bạn đang có phòng trọ / căn hộ cho thuê?</h3>
@@ -70,11 +124,22 @@
                         <div class="support-item"><span class="support-item-title">Hotline 24/7</span><a rel="nofollow"
                                 href="tel:0917686101">Điện thoại: 0917686101</a><a rel="nofollow" target="_blank"
                                 href="https://zalo.me/0917686101">Zalo: 0917686101</a></div><a
-                            class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi liên
+                            class="btn btn-page-contact" rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Gửi
+                            liên
                             hệ</a>
                     </div>
                 </div>
             </section>
         </main>
+        <!-- Footer -->
+        <div id="fixed_Left" class="banner_fixed" style="display: block; left: 39.5px;">
+            <a target="_blank" href="https://bds123.vn/"><img
+                    src="https://phongtro123.com/images/bds123_120_300.gif"></a>
+        </div>
+        <div id="fixed_Right" class="banner_fixed" style="display: block; right: 39.5px;">
+            <a target="_blank" rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook">
+                <img src="https://phongtro123.com/images/ad_nhom_fb.jpg"></a>
+        </div>
     </div>
 </div>
+<app-footer></app-footer>
