--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.css
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.css
@@ -181,7 +181,7 @@
     position: relative;
   }
   .table_post_listing .post_thumb img {
-    display: block;
+    /* display: block; */
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -218,6 +218,7 @@
     display: -webkit-box;
     -webkit-box-orient: vertical;
   }
+
   .table_post_listing .post_btn_toolbar .btn {
     margin-right: 5px;
     display: inline-flex;
