--- a/src/app/admin/staff-manager/create-staff/create-staff.component.html
+++ b/src/app/admin/staff-manager/create-staff/create-staff.component.html
@@ -58,8 +58,8 @@
                                 <div class="form-control form-control-user">
                                     <select name="subject" [formControlName]="'role'" [ngModel]="1">
                                         <option [disabled]="true" [value]="1">Lựa Chọn</option>
-                                        <option [value]="true">Admin</option>
-                                        <option [value]="false">Super Admin</option>
+                                        <option [value]="false">Admin</option>
+                                        <option [value]="true">Super Admin</option>
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
