--- a/src/app/admin/newspaper-manager/detail-newspaper/detail-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/detail-newspaper/detail-newspaper.component.html
@@ -50,7 +50,7 @@
                             <div class="form-group">
                                 <label class="col-md-2 col-sm-3 col-xs-12 control-label">Nội dung</label> 
                                 <div class="col-md-10 col-sm-9 col-xs-12">
-                                    <textarea type="text" [formControlName]="'content'" class="form-control"></textarea>
+                                    <div type="text" [innerHTML]="news?.content" class="form-control"></div>
                                 </div>
                             </div>
                         </fieldset>
