--- a/src/app/admin/staff-manager/update-staff/update-staff.component.html
+++ b/src/app/admin/staff-manager/update-staff/update-staff.component.html
@@ -12,27 +12,27 @@
                         <form class="user" [formGroup]="staffForm" (ngSubmit)="updateStaff()">
                             <div class="form-group">
                                 <label> Email </label>
-                                <input type="email" [formControlName]="'email'" class="form-control form-control-user" placeholder="">
+                                <input type="email" [formControlName]="'email'" class="form-control form-control-user">
                             </div>
                             <div class="form-group">
                                 <label> Họ và tên </label>
-                                <input type="text" [formControlName]="'name'"  class="form-control form-control-user" id="name" placeholder="">
+                                <input type="text" [formControlName]="'name'"  class="form-control form-control-user">
                             </div>                          
                             <div class="form-group">
                                 <label> Số điện thoại </label>
-                                <input type="text" [formControlName]="'phone'"  class="form-control form-control-user" id="phone" placeholder="">
+                                <input type="text" [formControlName]="'phone'"  class="form-control form-control-user">
                             </div>
                             <div class="form-group">
                                 <label> Số chứng minh nhân dân - thẻ căn cước </label>
-                                <input type="text" [formControlName]="'cardId'"  class="form-control form-control-user" id="cardId" placeholder="">
+                                <input type="text" [formControlName]="'cardId'"  class="form-control form-control-user">
                             </div>
                             <div class="form-group">
                                 <label> Địa chỉ </label>
-                                <input type="text" [formControlName]="'address'"  class="form-control form-control-user" id="address" placeholder="">
+                                <input type="text" [formControlName]="'address'"  class="form-control form-control-user">
                             </div>
                             <div class="form-group">
                                 <label> Ngày sinh </label>
-                                <input type="date" [formControlName]="'birthday'" class="form-control form-control-user" id="birthday" placeholder="">
+                                <input type="date" [formControlName]="'birthday'" class="form-control form-control-user">
                             </div>
                             <div class="form-group row">
                                 <div class="radio-label"> Giới tính: </div>
