--- a/src/app/client/profiles/edit-profile/edit-profile.component.css
+++ b/src/app/client/profiles/edit-profile/edit-profile.component.css
@@ -847,10 +847,56 @@ table thead {
     width: 130px;
     height: 140px;
     margin-top: -140px;
-    position: relative; top: -140px; left: 10px;
+    position: relative; top: -165px; left: 10px;
     border-radius: 10px;
 }
 
 .user-info-image>input{
     display: none;
 }
+
+.user-info-image button{
+    position: relative;
+    bottom: 160px;
+    left: 30px;
+}
+
+.radio input[type=radio] {
+    position: absolute;
+    opacity: 0;
+  }
+  .radio input[type=radio] + .radio-label:before {
+    content: "";
+    background: #f4f4f4;
+    border-radius: 100%;
+    border: 1px solid #b4b4b4;
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    position: relative;
+    top: -0.2em;
+    margin-right: 1.5em;
+    vertical-align: top;
+    cursor: pointer;
+    text-align: center;
+    transition: all 250ms ease;
+  }
+  .radio input[type=radio]:checked + .radio-label:before {
+    background-color: #3197ee;
+    box-shadow: inset 0 0 0 4px #f4f4f4;
+  }
+  .radio input[type=radio]:focus + .radio-label:before {
+    outline: none;
+    border-color: #3197ee;
+  }
+  .radio input[type=radio]:disabled + .radio-label:before {
+    box-shadow: inset 0 0 0 4px #f4f4f4;
+    border-color: #b4b4b4;
+    background: #b4b4b4;
+  }
+  .radio input[type=radio] + .radio-label:empty:before {
+    margin-right: 0;
+  }
+  .radio-label{
+    margin-left: 25px;
+  } 
