--- a/src/app/client/profiles/edit-profile/edit-profile.component.html
+++ b/src/app/client/profiles/edit-profile/edit-profile.component.html
@@ -23,7 +23,7 @@
                         <h1 class="h2">Cập nhật thông tin cá nhân</h1>
                     </div>
                     
-                    <form class="js-form-submit-data" [formGroup]="customerForm" novalidate="novalidate">
+                    <form class="js-form-submit-data" [formGroup]="customerForm" (ngSubmit)="postUpdateProfile()">
                         
                         <div class="form-group row mt-5">
                             <label for="user_id" class="col-md-2 offset-md-2 col-form-label">Mã thành viên</label>
@@ -38,9 +38,9 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="user_phone" class="col-md-2 offset-md-2 col-form-label">Số điện thoại</label>
+                            <label for="user_name" class="col-md-2 offset-md-2 col-form-label">Tên liên hệ</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control disable"[formControlName]="'phone'">
+                                <input type="text" class="form-control" [formControlName]="'name'">
                             </div>
                         </div>
                         <div class="form-group row">
@@ -50,21 +50,31 @@
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label for="user_name" class="col-md-2 offset-md-2 col-form-label">Tên liên hệ</label>
+                            <label for="user_phone" class="col-md-2 offset-md-2 col-form-label">Số điện thoại</label>
                             <div class="col-md-6">
-                                <input type="text" class="form-control" [formControlName]="'name'">
+                                <input type="text" class="form-control disable"[formControlName]="'phone'">
                             </div>
                         </div>
-                        <div class="form-group row" *ngIf="customerModel?.birthday.toString() === '1970-01-01'">
-                            <label class="col-md-2 offset-md-2 col-form-label"> Ngày sinh </label>
-                            <div class="col-md-6">
-                                <input type="date"  class="form-control" id="birthday" placeholder="">
-                            </div>
-                        </div>
-                        <div class="form-group row" *ngIf="customerModel?.birthday.toString() !== '1970-01-01'">
+                        <!-- <div class="form-group row" *ngIf="customerModel?.birthday.toString() === '1970-01-01'">
                             <label class="col-md-2 offset-md-2 col-form-label"> Ngày sinh </label>
                             <div class="col-md-6">
                                 <input type="date" [formControlName]="'birthday'" class="form-control" id="birthday" placeholder="">
+                            </div>
+                        </div> -->
+                        <div class="form-group row">
+                            <label class="col-md-2 offset-md-2 col-form-label"> Ngày sinh </label>
+                            <div class="col-md-6">
+                                <input type="date" [formControlName]="'birthday'" class="form-control" id="birthday" placeholder="">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <div class="col-md-2 offset-md-2 col-form-label"> Giới tính: </div>
+                                <div class="radio">
+                                <input id="radio-1" type="radio" [formControlName]="'gender'" [value]="true">
+                                <label for="radio-1" class="radio-label">Nam </label>
+
+                                <input id="radio-2" type="radio" [formControlName]="'gender'" [value]="false">
+                                <label for="radio-2" class="radio-label">Nữ</label>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -82,7 +92,7 @@
                         <div class="form-group row mt-5">
                             <label for="user_email" class="col-md-2 col-form-label"></label>
                             <div class="col-md-8">
-                                <button type="submit" class="btn btn-primary mb-2 btn-block">Cập nhật</button>
+                                <button type="submit" class="btn btn-primary mb-2 btn-block" [disabled]="customerForm.invalid">Cập nhật</button>
                             </div>
                         </div>
                     </form>
