--- a/src/app/admin/article-manager/view-article/view-article.component.html
+++ b/src/app/admin/article-manager/view-article/view-article.component.html
@@ -4,7 +4,7 @@
             <main role="main" class="ml-sm-auto col-lg-10" style="margin-top: -40px;">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Quản lý tin đăng</h1>
+                    <h1 class="h2">Quản lý Bài đăng</h1>
 
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div id="hic">
@@ -43,10 +43,10 @@
                                     đã duyệt</a>
                             </div>
                         </div>
-                        <button class="btn btn-success btn-sm d-none d-md-block"
+                        <!-- <button class="btn btn-success btn-sm d-none d-md-block"
                             href="https://phongtro123.com/quan-ly/dang-tin-moi.html" [disabled]="true">Đăng tin mới</button>
                         <div class="d-lg-none" style="width: 100%;"><a class="btn btn-danger btn-block mt-3"
-                                href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a></div>
+                                href="https://phongtro123.com/quan-ly/dang-tin-moi.html">Đăng tin mới</a></div> -->
                     </div>
                 </div>
 
@@ -55,31 +55,29 @@
                         <table class="table table_post_listing table-bordered _table-hover">
                             <thead>
                                 <tr>
-                                    <th>Mã tin</th>
-                                    <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
-                                    <th style="text-align: center;">Tiêu đề
+                                    <th [ngStyle]="{'text-align': 'center'}">Mã tin</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Ảnh đại diện</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Tiêu đề
                                         <br/>
                                         (Ấn để xem chi tiết bài viết)
                                     </th>
-                                    <th>Giá</th>
-                                    <th style="white-space: nowrap;">Ngày bắt đầu</th>
-                                    <th style="white-space: nowrap;">Ngày hết hạn</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Giá</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Ngày bắt đầu</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Ngày hết hạn</th>
                                     <!-- <th>Người đăng</th> -->
-                                    <th style="white-space: nowrap;">Trạng thái</th>
-                                    <th>Chức năng</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Chức năng</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let article of article">
-                                    <td>#{{article.articleId}}</td>
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">#{{article.articleId}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <div class="post_thumb">
-                                           
                                                 <img src={{article?.image}}>
                                         </div>
                                     </td>
                                     <td>
-                                        <!-- có 2 loại phòng (Phòng trọ - ở ghép) hiển thị 1 trong 2 dòng dưới tùy vào loại phòng -->
                                         <span class="badge badge-pill badge-warning">Phòng trọ</span>
                                         <span class="badge badge-pill badge-warning">Ở ghép</span>
 
@@ -87,8 +85,7 @@
                                             href="https://phongtro123.com/quan-ly/tin-dang.html#"
                                             style="color: #055699;">{{article?.title}}
                                         </a>
-
-                                        <div class="post_btn_toolbar mt-3">
+                                        <!-- <div class="post_btn_toolbar mt-3">
                                             <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303"
                                                 class="btn btn-sm btn_danglai"><svg
                                                     xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -101,22 +98,22 @@
                                                         d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15">
                                                     </path>
                                                 </svg> Đăng lại tin</a>
-                                        </div>
+                                        </div> -->
                                         <span style="display: block; color: #999; margin-top: 10px;">
                                             Cập nhật gần nhất: {{article?.lastUpdateTime | date:'dd/MM/yyyy'}}
                                         </span>
                                     </td>
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <div class="post_price">{{article.roomPrice}}</div>
                                     </td>
-                                    <td>{{article.createTime | date:'dd/MM/yyyy - HH:mm'}}</td> 
-                                    <td>{{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{article.createTime | date:'dd/MM/yyyy - HH:mm'}}</td> 
+                                    <td [ngStyle]="{'text-align': 'center'}">{{article.lastUpdateTime | date:'dd/MM/yyyy - HH:mm'}}</td>
                                     <!-- <td>{{article.customer.email}}</td> -->
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <span class="text text-warning" style="white-space: nowrap;">{{article?.status}}</span>
                                     </td>
-                                    <td>
-                                        <a style=" padding-left: 35px;" routerLink="detail-article/{{article.articleId}}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
+                                    <td [ngStyle]="{'text-align': 'center'}">
+                                        <a routerLink="detail-article/{{article.articleId}}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
                                         <!-- <a routerLink="update-article/{{article.articleId}}" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a> -->
                                         <!-- <a routerLink="../staff" class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a> -->
                                     </td>
