--- a/src/app/admin/customer-manager/view-customer/view-customer.component.html
+++ b/src/app/admin/customer-manager/view-customer/view-customer.component.html
@@ -33,42 +33,39 @@
                         <table class="table table_post_listing table-bordered _table-hover">
                             <thead>
                                 <tr>
-                                    <th>ID người dùng</th>
-                                    <th>Họ tên</th>
-                                    <th>Số dư TK</th>
-                                    <th>CMND</th>
-                                    <th>Địa chỉ</th>
-                                    <th>Ngày sinh</th>
-                                    <th>SĐT</th>
-                                    <th>Giới tính</th>
-                                    <th>Trạng thái</th>
-                                    <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
-                                    <th>Chức năng</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">ID người dùng</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Họ tên</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Số dư TK</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">CMND</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Địa chỉ</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Ngày sinh</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">SĐT</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Giới tính</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Ảnh đại diện</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Chức năng</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr *ngFor="let customer of customers">
                                     <!--// customers lấy từ class view-customer.components.ts -->
-                                    <td>{{customer?.customerId}}
-                                        <br> <!-- thêm ô checkbox để chọn từng người dùng  -->
-                                        <input type="checkbox" style="border-radius: 10px;">
-                                    </td>
-                                    <td>{{customer?.name}}</td>
-                                    <td>{{customer?.accountBalance}}</td>
-                                    <td>{{customer?.cardId}}</td>
-                                    <td>{{customer?.address}}</td>
-                                    <td>{{customer?.birthday | date:'dd/MM/yyyy'}}</td>
-                                    <td>{{customer?.phone}}</td>
-                                    <td *ngIf="customer?.gender == true">Nam</td>
-                                    <td *ngIf="customer?.gender == false">Nữ</td>
-                                    <td *ngIf="customer?.deleted == true" [ngStyle]="{'color':'red'}">Đang khóa</td>
-                                    <td *ngIf="customer?.deleted == false" [ngStyle]="{'color':'green'}">Hoạt động</td>
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">#{{customer?.customerId}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.name}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.accountBalance}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.cardId}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.address}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.birthday | date:'dd/MM/yyyy'}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{customer?.phone}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}" *ngIf="customer?.gender == true">Nam</td>
+                                    <td [ngStyle]="{'text-align': 'center'}" *ngIf="customer?.gender == false">Nữ</td>
+                                    <td *ngIf="customer?.deleted == true" [ngStyle]="{'color':'red', 'text-align': 'center'}">Đang khóa</td>
+                                    <td *ngIf="customer?.deleted == false" [ngStyle]="{'color':'green', 'text-align': 'center'}">Hoạt động</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <div class="post_thumb">
                                             <img src={{customer?.image}}>
                                         </div>
                                     </td>
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <a routerLink="detail-customer/{{customer?.customerId}}" class="view"
                                             title="View" data-toggle="tooltip"><i
                                                 class="material-icons">&#xE417;</i></a>
