--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -52,58 +52,38 @@
                         <table class="table table_post_listing table-bordered _table-hover">
                             <thead>
                                 <tr>
-                                    <th>Mã tin</th>
-                                    <th style="text-align: center; white-space: nowrap;">Ảnh đại diện</th>
-                                    <th>Tiêu đề</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Mã tin</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Ảnh đại diện</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Tiêu đề</th>
                                     <!-- <th style="white-space: nowrap;">Nội dung</th> -->
-                                    <th style="white-space: nowrap;">Tác giả</th>
-                                    <th style="white-space: nowrap;">Trạng thái</th>
-                                    <th>Chức năng</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Tác giả</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Trạng thái</th>
+                                    <th [ngStyle]="{'text-align': 'center'}">Chức năng</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr class="texttr" *ngFor="let new of news">
-                                    <td>#{{new.newId}}</td>
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">#{{new.newId}}</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <div class="post_thumb">
                                             <a routerLink="detail-newspaper/{{new.newId}}">
                                                 <img src="{{new.image}}"></a>
                                         </div>
                                     </td>
                                     <td>
-                                        <!-- có 2 loại phòng (Phòng trọ - ở ghép) hiển thị 1 trong 2 dòng dưới tùy vào loại phòng -->
-                                        <!-- <span class="badge badge-pill badge-warning">Phòng trọ</span>
-                                        <span class="badge badge-pill badge-warning">Ở ghép</span> -->
-
                                         <a class="post_title" 
                                             routerLink="detail-newspaper/{{new.newId}}"
                                             style="color: #055699;">{{new.title}}
                                         </a>
-<!-- 
-                                        <div class="post_btn_toolbar mt-3">
-                                            <a href="https://phongtro123.com/quan-ly/tin-dang/dang-lai-tin/312303" class="btn btn-sm btn_danglai">
-                                                <svg
-                                                    xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                    viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                                    stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                                                    class="feather feather-refresh-ccw">
-                                                    <polyline points="1 4 1 10 7 10"></polyline>
-                                                    <polyline points="23 20 23 14 17 14"></polyline>
-                                                    <path
-                                                        d="M20.49 9A9 9 0 0 0 5.64 5.64L1 10m22 4l-4.64 4.36A9 9 0 0 1 3.51 15">
-                                                    </path>
-                                                </svg> Đăng lại tin
-                                            </a>
-                                        </div> -->
                                         <span style="display: block; color: #999; margin-top: 10px;">
                                             Cập nhật gần nhất: {{new.updateTime | date:'dd/MM/yyyy HH:mm'}}
                                         </span>
                                     </td>
                                     <!-- <td  class="textnd">{{new.content}}</td>  -->
-                                    <td>{{new.author}}</td>
-                                    <td *ngIf="new.deleted == true" [ngStyle]="{'color':'red'}">Đã ẩn</td>
-                                    <td *ngIf="new.deleted == false" [ngStyle]="{'color':'green'}">Đang hiện</td>
-                                    <td>
+                                    <td [ngStyle]="{'text-align': 'center'}">{{new.author}}</td>
+                                    <td *ngIf="new.deleted == true" [ngStyle]="{'color':'red', 'text-align': 'center'}">Đã ẩn</td>
+                                    <td *ngIf="new.deleted == false" [ngStyle]="{'color':'green', 'text-align': 'center'}">Đang hiện</td>
+                                    <td [ngStyle]="{'text-align': 'center'}">
                                         <a routerLink="detail-newspaper/{{new.newId}}" class="view" title="View" data-toggle="tooltip"><i class="material-icons">&#xE417;</i></a>
                                         <a routerLink="update-newspaper/{{new.newId}}" class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
                                         <a routerLink="." class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons" (click)="deleteNewpaper(new.newId)">&#xE872;</i></a>
