--- a/src/app/admin/shared/header/header.component.html
+++ b/src/app/admin/shared/header/header.component.html
@@ -5,7 +5,7 @@
     </button>
 
     <!-- Topbar Search -->
-    <form
+    <!-- <form
         class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
         <div id="1" class="input-group">
             <input type="text" class="form-control bg-light border-0 small" placeholder="Tìm kiếm..."
@@ -16,7 +16,7 @@
                 </button>
             </div>
         </div>
-    </form>
+    </form> -->
 
     <!-- Topbar Navbar -->
     <ul class="navbar-nav ml-auto">
