--- a/src/app/client/clients-page/shared/header/header.component.html
+++ b/src/app/client/clients-page/shared/header/header.component.html
@@ -63,7 +63,6 @@
                                 Thoát
                             </a>
                         </li>
-
                     </ul>
                 </div>
                 <a rel="nofollow" class="btn btn-add-post" routerLink="/profile/create-article">Đăng tin mới <i></i></a>
@@ -71,12 +70,12 @@
         </div>
         <nav id="navbar-menu">
         <ul id="menu-main-menu" class="container-menu clearfix level-1">
-            <li class="navbar_item clearfix active current-menu-item"><a routerLink="/client/home">Trang chủ</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/rent-room">Cho thuê phòng trọ</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/room-mates">Tìm người ở ghép</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/blog">Blog</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/tutorial">Hướng dẫn</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/profile/paypal-view">Nạp tiền</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/profile/price-list">Bảng giá</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/" >Trang chủ</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/rent-room">Cho thuê phòng trọ</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/room-mates">Tìm người ở ghép</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/blog">Blog</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/tutorial">Hướng dẫn</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'"><a routerLink="/profile/paypal-view">Nạp tiền</a></li>
+            <li class="navbar_item clearfix" [routerLinkActive]="'current-menu-item'"><a routerLink="/profile/price-list">Bảng giá</a></li>
         </ul>
         </nav>
