--- a/src/app/client/profiles/create-article/create-article.component.html
+++ b/src/app/client/profiles/create-article/create-article.component.html
@@ -45,7 +45,7 @@
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <label class="col-form-label">Giới tính</label>
-                                            <select id="province_id" [formControlName]="'rmGender'" class="form-control js-select-tinhthanhpho select2-hidden-accessible" required="">
+                                            <select id="province_id" [formControlName]="'rmGender'" class="form-control js-select-tinhthanhpho select2-hidden-accessible">
                                                 <option value="true">Nam</option>
                                                 <option value="false">Nữ</option>
                                             </select>
