Highlight selected cell in profile

--- a/src/app/client/profiles/shared/sidebar/sidebar.component.html
+++ b/src/app/client/profiles/shared/sidebar/sidebar.component.html
@@ -30,7 +30,7 @@
                     </div>
                     <ul class="nav nav-sidebar">
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="/profile/article-manager">
+                            <a class="nav-link " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}" routerLink="/profile/article-manager">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-file-text">
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="/profile/favorite-article">
+                            <a class="nav-link " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/favorite-article">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="20" height="20" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;"
                                     xml:space="preserve">
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="/profile/edit-profile">
+                            <a class="nav-link" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/edit-profile">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-edit">
@@ -68,7 +68,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/profile/paypal-view">
+                            <a class="nav-link" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/paypal-view">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-dollar-sign">
@@ -78,7 +78,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="/profile/recharge-history">
+                            <a class="nav-link " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/recharge-history">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-clock">
@@ -88,7 +88,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="/profile/payment-history">
+                            <a class="nav-link " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/payment-history">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-calendar">
@@ -100,7 +100,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="/profile/price-list">
+                            <a class="nav-link " [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/price-list">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-clipboard">
@@ -111,7 +111,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/profile/price-list">
+                            <a class="nav-link" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/profile/Chưa có">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-message-circle">
@@ -122,7 +122,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" routerLink="/">
+                            <a class="nav-link" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact: true}"  routerLink="/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-log-out">
